# kv-rdma-poc

./: BENCHMARK-CHANGES.md  BENCHMARK.md  BUILD-INSTRUCTIONS.md  CLAUDE.md  CONCURRENCY-MODEL.md  Cargo.toml  DEBUGGING-GET-HANG.md  KNOWN-ISSUES.md  LARGE-VALUES.md  QUICK-START-BENCHMARK.md  README.md  REPEAT-READS.md  SERVER-RDMA-SETUP.md  USAGE.md  build-with-rdma.sh  build.rs  fabric-lib-host-only-implementation.md  run-with-rdma.sh  test-rdma-debug.sh
examples/: run-benchmark.sh
proto/: kv_cache.proto
src/: client.rs  lib.rs  main.rs  memory.rs  protocol.rs  server.rs  transport.rs
tests/: integration_test.rs
