[package]
name = "kv-rdma-poc"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# gRPC for control plane
tonic = "0.12"
prost = "0.13"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# Utilities
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"
dashmap = "6"
parking_lot = "0.12"
smallvec = { version = "1", features = ["serde"] }

# For atomic counters
crossbeam = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# fabric-lib for RDMA (optional, for real hardware)
# fabric-lib = { path = "../pplx-garden/fabric-lib" }

[build-dependencies]
tonic-build = "0.12"

[[bin]]
name = "kv-server"
path = "src/bin/server.rs"

[[bin]]
name = "kv-client"
path = "src/bin/client.rs"
